[package]
name = "exemplify"
version = "0.1.2"
authors = ["Mathias Myrland <jedimemo@gmail.com>"]
edition = "2018"
description = "Tool for generating code examples from annotated source file directories"
homepage = "https://github.com/JedimEmO/exemplify"
repository = "https://github.com/JedimEmO/exemplify"
license = "MIT"
readme = "../../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-beta.1", features = ["derive"] }
# Remove path from dependency before publishing
exemplify-lib = { version = "0.1.3", path = "../lib/exemplify-lib" }
futures = "0.3.5"
tokio = { version = "0.2.22", features = ["macros"] }
