[package]
name = "exemplify-lib"
version = "0.1.5"
authors = ["Mathias Myrland <jedimemo@gmail.com>"]
edition = "2018"
description = "Tool for generating code examples from annotated source file directories"
homepage = "https://github.com/JedimEmO/exemplify"
repository = "https://github.com/JedimEmO/exemplify"
license = "MIT"
readme = "../../../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
futures = "0.3.5"
regex = "1.3.9"

[dev-dependencies]
tokio = {version ="0.2.22", features = ["rt-threaded", "macros"]}
stringreader = "0.1.1"
